--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\TicTacToe\GD_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GE_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\Gh_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GB_TicTacToe.cs" />
