--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -79,6 +79,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Classes\TicTacToe\GA_TicTacToe.cs" />
+    <Compile Include="Classes\TicTacToe\GC_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GD_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GE_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GB_TicTacToe.cs" />
