--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Classes\TicTacToe\Gh_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GI_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GA_TicTacToe.cs" />
+    <Compile Include="Classes\TicTacToe\Versuch gruppe f.cs" />
     <Compile Include="Classes\Vorl_Bsps.cs" />
     <Compile Include="Classes\TicTacToe\BaseTicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\TicTacToe.cs" />
